# bluesky

./: .gitignore  .pre-commit-config.yaml  .re_md_dict.yml  LICENSE.txt  Lambda2M_Test_bps.py  NOTES.md  README.md  blueskyStarter.sh  d0.md  dev_eiger4m_tips.md  environment.yml  prj-2024-01-10.md  pyproject.toml  pyproject_old.toml  qs_starter.py  qserver.md  qserver.sh  qstarter.py  run_qs.sh  user_group_permissions.yaml
.github/: dependabot.yml
.github/workflows/: pre-commit.yml
bits_8id/devices/: __init__.py  ad_lambda_2M.py  filters_8id.py  granite.py  granite_enable.py  registers_device.py
bits_8id/plans/: select_sample_env.py  shutter_logic_8ide.py
console/: __start_bluesky_instrument__.py
environments/: README.md  environment_2023_3.yml  environment_2024_1.yml
instrument/: NOTES.md  README.md  _iconfig.py  collection.py  iconfig.yml  queueserver.py  queueserver_framework.py
instrument/callbacks/: nexus_data_file_writer.py  scan_signal_statistics.py
instrument/devices/: __init__.py  _apstools_data_management.py  _apstools_dm_prep.py  ad_common.py  ad_lambda2M.py  ad_simdet4M.py  aerotech_stages.py  aps_source.py  aps_undulator.py  area_detector.py  area_detectors.py  calculation_records.py  damm.py  data_management.py  flag_4.py  flight_tube.py  fourc_diffractometer.py  hhl_mirrors.py  hhl_slits.py  idt_mono.py  kohzu_monochromator.py  meascomp_usb_ctr.py  meascomp_usb_ctr08.py  motors.py  qnw_device.py  scaler.py  simulated_1d_detector.py  slit_4.py  temperature_signal.py  tetramm_picoammeter.py  white_beam_slit.py
instrument/devices/.unused_examples/: ioc_stats.py  motors.py  noisy_detector.py
instrument/framework/: __init__.py  aps_data_management.py  check_bluesky.py  check_python.py  dm_setup.py  initialize.py  metadata.py
instrument/mpl/: notebook.py
instrument/plans/: __init__.py  acquire_plans.py  ad_setup_plans.py  bdp_demo.py  demo_hello_world.py  detector_prep.py  lineup2_plan.py  nexus_writer.py  peak_finder_example.py  qnw_plans.py  qs_hello_test.py
instrument/tests/: check_subnet.py
instrument/utils/: __init__.py  aps_data_management.py  iconfig_loader.py  image_analysis.py
jupyter_notebooks/: internal_test_day4.ipynb
notebooks/: 202406028_Day2_3pm.ipynb  20240627_Day1_3pm.ipynb  20240629_Day3.ipynb  Untitled.ipynb
qserver/: qs-config.yml  qs_host.sh
resources/: README_old.md  environment_old.yml  fix.md
scripts/: 202406028_Day2.ipynb  202406028_Day2_3pm.ipynb  20240626_Day0.ipynb  20240627_Day1.ipynb  20240627_Day1_3pm.ipynb  20240629_Day3.ipynb  20240701_Day5.ipynb  Untitled.ipynb  __start_bluesky_instrument__.py  _qs_host.sh  _run_qs.sh  blueskyStarter.sh  bluesky_interactive_startup.ipy  bs_interactive_starter.sh  bs_ipy_profile.ipy  bs_ipy_starter.sh  bs_profile.ipy  bs_qs_screen_starter.sh  bs_qs_startup.py  check_environment.py  check_environment_test.py  demo_notebook.ipynb  interactive_bluesky_session.sh  internal_test_day4.ipynb  ipython_startup.ipy  ipython_startup.py  jupyter_starter.py  qserver.md  qserver.sh  qserver_screen.sh  qstarter.py  reset_instrument.sh  run_ipython.py  run_qs.sh  start_interactive_bluesky_session.sh  start_ipython.sh  test.py
scripts/console/: __start_bluesky_instrument__.py
scripts/user/: Lambda2M_Test_bps.py  bsqs_client.py  filter_op.py  lessons_learned.md  qs_bdp_acquire.py  qs_hello_world.py  quick_hello.py  xpcs_mesh.py
src/8id_bs_instrument/: epics_signal_config.py  queueserver.py  session_logs.py
src/8id_bs_instrument/callbacks/: __init__.py  nexus_data_file_writer.py  scan_signal_statistics.py  spec_data_file_writer.py
src/8id_bs_instrument/devices/: _apstools_data_management.py  ad_common.py  aerotech_stages.py  damm.py  data_management.py  flag_4.py  hhl_mirrors.py  meascomp_usb_ctr.py  qnw_device.py
src/8id_bs_instrument/framework/: __init__.py  dm_setup.py  initialize.py  metadata.py
src/8id_bs_instrument/plans/: __init__.py  acquire_plans.py  bdp_demo.py  detector_prep.py  listruns_plan.py  lup_plan.py  mesh_plans.py  qnw_plans.py
src/REFERENCE_ONLY_instrument/: initialize_bs_tools.py
src/REFERENCE_ONLY_instrument/callbacks/: spec_files.py
src/REFERENCE_ONLY_instrument/configs/: iconfig.yml
src/REFERENCE_ONLY_instrument/devices/: _8id_common.py  __init__.py  ad_eiger_4M.py  ad_rigaku_3M.py  lakeshore.py  qnw_vac_device.py
src/REFERENCE_ONLY_instrument/plans/: __init__.py  ad_setup_plans.py  move_sample.py  nexus_acq_eiger_int_robust_test.py  nexus_acq_rigaku_zdt.py  nexus_acq_rigaku_zdt_fly.py  nexus_utils.py  qnw_plans.py  sample_info_unpack.py  select_detector.py  simple_plans.py
src/REFERENCE_ONLY_instrument/utils/: epics_tools.py  metadata.py
src/aps_8id_bs_instrument/: __init__.py  _iconfig.py  collection.py  data_collection.py  epics_signal_config.py  initialize.py  initialize_bs_tools.py  queueserver.py  queueserver_framework.py  registry.py  run_engine.py  session_logs.py
src/aps_8id_bs_qserver/: bsqs_client.py  qserver.sh  qstarter.py  queueserver.py  queueserver_framework.py
src/bits_8id/: README.md  __init__.py  startup.py
src/bits_8id_qserver/: qs-config.yml  qs_host.sh  sample_info.json
src/id8_e/: __init__.py
src/id8_e_qserver/: qs-config.yml  qs_host.sh
src/id8_i/: __init__.py  startup.py
src/id8_i/devices/: mono.py  (+33 more)
src/id8_i_qserver/: __init__.py  qs-config.yml  qs_host.sh  sample_info.json  waxpcs-commissioning_1120
src/instrument/: __init__.py  data_collection.py  iconfig.yml  initialize_bs_tools.py  initialize_qs.py  ipython_startup.ipy  ipython_startup.py  jupyter_startup.py  startup.py
src/xpcs/: startup.py
src/xpcs_qserver/: qs-config.yml  qs_host.sh  sample_info.json
user/: Lambda2M_Test_bps.py  qs_bdp_acquire.py  qs_hello_world.py  qs_rep_acq.py  quick_hello.py
(+359 files in other folders)
